# python-keystoneclient-kerberos

./: .coveragerc  .gitreview  CONTRIBUTING.rst  HACKING.rst  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
doc/source/: conf.py  drivers.rst  index.rst  installation.rst  usage.rst
keystoneclient_kerberos/: __init__.py  kerberos.py  v3.py
keystoneclient_kerberos/tests/: base.py  test_federated.py  test_kerberos_auth.py  test_keystoneclient_kerberos.py  test_v3.py  utils.py
