[metadata]
name = python-keystoneclient-kerberos
summary = Kerberos authentication for the OpenStack clients
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[files]
packages =
    keystoneclient_kerberos

[entry_points]
keystoneclient.auth.plugin =
    v3kerberos = keystoneclient_kerberos.v3:Kerberos

[wheel]
universal = 1
